fix add to cart price alignment

--- a/assets/base.css
+++ b/assets/base.css
@@ -26684,6 +26684,66 @@ body.multitasking__show .newsletter-popup-opener {
 .buy-button-price {
   display: inline;
 }
+.buy-button-price .separator {
+  margin-left:10px;
+  margin-right:15px;
+  display: none !important;
+}
+@media screen and (min-width:392px){
+  .buy-button-price .separator {
+    display: inline-block !important;
+  }
+}
+@media screen and (min-width:990px){
+  .buy-button-price .separator {
+    display: none !important;
+  }
+}
+@media screen and (min-width:1099px){
+  .buy-button-price .separator {
+    display: inline-block !important;
+  }
+}
+@media screen and (min-width:1200px){
+  .buy-button-price .separator {
+    display: none !important;
+  }
+}
+@media screen and (min-width:1432px){
+  .buy-button-price .separator {
+    display: inline-block !important;
+  }
+}
+
+.buy-button-price .price-alignment {
+  float: unset !important;
+}
+@media screen and (min-width:392px){
+  .buy-button-price .price-alignment {
+    float: right !important;
+  }
+}
+@media screen and (min-width:990px){
+  .buy-button-price .price-alignment {
+    float: unset !important;
+  }
+}
+@media screen and (min-width:1099px){
+  .buy-button-price .price-alignment {
+    float: right !important;
+  }
+}
+@media screen and (min-width:1200px){
+  .buy-button-price .price-alignment {
+    float: unset !important;
+  }
+}
+@media screen and (min-width:1432px){
+  .buy-button-price .price-alignment {
+    float: right !important;
+  }
+}
+
 .buy-button-price .d-block {
   display: none;
 }
